--- a/css/style.css
+++ b/css/style.css
@@ -39,31 +39,130 @@ body {
     background-color: burlywood;
 }
 
+/* colonna utente */
 .user-col {
     width: 100%;
     height: 8%;
     background-color: #EAEAEA;
     border-right: 1px solid lightgrey;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
+.profilo-utente {
+    display: flex;
+    align-items: center;
+    width: 50%;
+}
+
+.user-col img {
+    width: 25%;
+    border-radius: 50%;
+    margin-left: 5px;
+    cursor: pointer;
+}
+
+.user-icon i {
+    cursor: pointer;
+    font-size: 25px;
+    margin-right: 15px;
+    color: #B1B1B1;
+}
+
+.user-icon i:last-child {
+    margin-right: 25px;
+}
+
+/* colonna notifiche */
 .notifiche {
     width: 100%;
     height: 9%;
     background-color: #8EDAFC;
+    display: flex;
+    align-items: center;
 }
 
+.notification-icon {
+    cursor: pointer;
+    padding: 15px 15px;
+    border-radius: 50%;
+    font-size: 25px;
+    color: #8EDAFC;
+    background-color: white;
+    margin-left: 20px;
+}
+
+.notification-options {
+    margin-left: 10px;
+}
+
+.notification-options a {
+    color: gray;
+}
+
+/* colonna ricerche */
 .search-col {
     width: 100%;
     height: 6%;
     background-color: #fff;
     border-right: 1px solid lightgrey;
+    display: flex;  
+    align-items: center;
 }
 
+.search-icon {
+    cursor: pointer;
+    width: 15%;
+    height: 80%;
+    border-radius: 5px;
+    border: 1px solid lightgrey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: #B1B1B1;
+    margin-left: 5px;
+}
+
+.search-input {
+    width: 80%;
+    height: 80%;   
+}
+
+.search-input input {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+/* lista degli amici */
 .friends-list {
     width: 100%;
     height: calc(100% - 23%);
     background-color: red;
     border-right: 1px solid lightgrey;
+}
+
+.list-item {
+    width: 100%;
+    height: 11%;
+    background-color: lightgrey;
+    display: flex;
+    align-items: center;
+}
+
+.list-item img {
+    height: 85%;
+    border-radius: 50%;
+    cursor: pointer;
+    margin-left: 20px;
+}
+
+.list-name {
+    height: 80%;
+    margin-left: 15px;
 }
 
 /* colonna destra */
