--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ body {
 .box {
     width: 80%;
     height: 95%;
-    background-color: blue;
     display: flex;
 }
 
@@ -36,7 +35,6 @@ body {
 .col-sn {
     width: 30%;
     height: 100%;
-    background-color: burlywood;
 }
 
 /* colonna utente */
@@ -141,14 +139,13 @@ body {
 .friends-list {
     width: 100%;
     height: calc(100% - 23%);
-    background-color: red;
     border-right: 1px solid lightgrey;
+    background-color: #fff;
 }
 
 .list-item {
     width: 100%;
     height: 11%;
-    background-color: lightgrey;
     display: flex;
     align-items: center;
 }
@@ -176,16 +173,124 @@ body {
     width: 100%;
     height: 8%;
     background-color: #EAEAEA;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.friend-account {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.friend-image {
+    width: 13%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.friend-image img {
+    width: 100%;
+    border-radius: 50%;
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+.friend-name {
+    margin-left: 20px;
+}
+
+.friend-name span {
+    color: gray;
+}
+
+.friend-options {
+    margin-right: 20px;
+    font-size: 25px;
+    color: #B1B1B1;
+    cursor: pointer;
+}
+
+.friend-options i {
+    margin-left: 15px;
 }
 
 .chat-col {
     width: 100%;
     height: calc(100% - 16%);
     background-image: url(../img/mine.jpg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chat-box {
+    width: 80%;
+    height: 90%;
+}
+
+.inviato-box {
+    width: 100%;
+    height: 12%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.inviato {
+    width: 40%;
+    height: 90%;
+    border-radius: 10px;
+    background-color: #D5F9BA;
+}
+
+.ricevuto-box {
+    width: 100%;
+    height: 12%;
+    display: flex;
+}
+
+.ricevuto {
+    width: 40%;
+    height: 90%;
+    border-radius: 5px;
+    background-color: #fff;
 }
 
 .chat-options {
     width: 100%;
     height: 8%;
     background-color: #F3EEEA;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.chat-options i {
+    font-size: 25px;
+    color: #6B7376;
+    cursor: pointer;
+}
+
+.smile {
+    width: 10%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mic {
+    width: 10%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chat-options input {
+    width: 80%;
+    height: 80%;
+    font-size: 18px;
 }
