--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,10 @@ body {
     margin-left: 20px;
 }
 
+.list-item.active {
+    background-color: #e9ebeb;
+}
+
 .list-name {
     height: 80%;
     margin-left: 15px;
